Fix wrong time estimate, add shop status endpoint
